// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JapiTableHead renders a table row for each data entry 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      1
    </td>
    <td
      className={undefined}
    />
  </tr>
  <tr>
    <td
      className={undefined}
    >
      2
    </td>
    <td
      className={undefined}
    />
  </tr>
</tbody>
`;

exports[`JapiTableHead renders an optional header cell className 1`] = `
<tbody>
  <tr>
    <td
      className="class1"
    >
      1
    </td>
    <td
      className="class2"
    />
  </tr>
  <tr>
    <td
      className="class1"
    >
      2
    </td>
    <td
      className="class2"
    />
  </tr>
</tbody>
`;

exports[`JapiTableHead renders appropriate cell values 1`] = `
<tbody>
  <tr>
    <td
      className={undefined}
    >
      101
    </td>
    <td
      className={undefined}
    >
      Title 1
    </td>
  </tr>
  <tr>
    <td
      className={undefined}
    >
      102
    </td>
    <td
      className={undefined}
    >
      Title 2
    </td>
  </tr>
</tbody>
`;
